# data_engineering_zoomcamp_2025

./: .gitignore  ingest_data.py  pyproject.toml
1_docker/: services:.yaml
2_docker/: Dockerfile  ingest_zone_data.py  upload-data.py
2_workflow_orchestration/: docker-compose.yml
3_data_warehouse/: load_yellow_taxi_data.py  main.tf  readme.md  variables.tf
4_data_analytics/: fix_schema_of_parquet_files.py  load_taxi_data.py  load_taxi_data_homework.py  main.tf  readme.md  variables.tf
4_data_analytics/taxi_rides_ny/: dbt_project.yml
4_data_analytics/taxi_rides_ny/models/core/: dim_fhv_trips.sql  fact_trips.sql  fct_fhv_monthly_zone_traveltime_p90.sql  fct_taxi_trips_monthly_fare_p95.sql  fct_taxi_trips_quarterly_revenue.sql  schema.yml
4_data_analytics/taxi_rides_ny/models/staging/: schema.yml  stg_fhv_tripdata.sql
5_batch/: 03_test.ipynb  04_pyspark.ipynb  05_taxi_schema.ipynb  06_spark_sql.ipynb  07_groupby_join.ipynb  homework.ipynb  readme.md  test_pyspark.py
6_streaming/: connect_to_kafka.py  session_job.py
6_streaming/06-streaming/pyflink/src/job/: session_job.py
homework/: docker-compose.yml  notes.txt
terrademo/: main.tf  variables.tf
workshop_dlt/: de_zoomcamp_dlt_homework.ipynb
